Revision history for VCtools

NEXT
	*	base command improvements:
		vc-perlbrew : fix bugs in `INSTALL` that caused complete failure to install

0.17	2018-09-13		027306f987
	*	base command improvements:
		vc : better and more stable respawning with Perlbrew-ed perl
		vc-perlbrew : avoid respawning, or install Perlbrew in the first place
	*	debugging improvements:
		vc DEBUG=1 : with debugging, if a module can't be loaded (thus triggering running `vctools-prereq-verify`),
		     show the exact error

0.16	2018-03-13		87bf6cc34e
	*	bug fixes:
		`%branches` and `%remote_branches` now eliminate colors to avoid bugs when matching against strings
		`%is_dirty` no longer broken by changes in the `git status` message
	*	base command improvements:
		vc : will now automatically respawn itself using included Perlbrew Perl iff it exists
		     (Perlbrew Perl is not built by default install, but perhaps that will be a feature soon)
		vc unstash : in Git, allow unstash by name as well as number (first matching string)
		vc sync : in Git, now doing a much safer unstash
		vc unstash : better error when requested stash doesn't exist; more efficient implementation
	*	config file improvements:
		can now use $ENV_VAR in config *Dir directives and <<include>> directives
	*	code expansion improvements:
		now throws warning and uses '' when an env var doesn't exist
	*	debugging improvements:
		vc DEBUG=x cmd : as long as x is 2 or higher, print Perl path and version

0.15	2014-10-23		dcbda2e6b6
	*	bug fixes:
		`vc commands` no longer has "FILL ME IN" for some commands
		`vc commit` now does a `verify = project`
		`vc unstage` now accepts files (and therefore doesn't unstage everything when you request just one file)
		`vc` no longer repeatedly tries to run `vctools-prereq-verify` when what's missing is an internal module
		"no output" directives (e.g. comments, env assigns) inside %info methods no longer produce bogus output
	*	modified commands: