@@ -10,6 +10,12 @@ vctoolsdir=${0%bin/*}
 vctoolsdir=${vctoolsdir%/}
 vctoolsdir=${vctoolsdir:-$PWD}
 [[ -d $vctoolsdir ]] || die "cannot determine VCtools directory"
+# save these so they can be restored later
+export PATH_WITHOUT_VC=$PATH
+export PERL_LOCAL_LIB_ROOT_WITHOUT_VC=$PERL_LOCAL_LIB_ROOT
+export PERL5LIB_WITHOUT_VC=$PERL5LIB
+export PERL_MM_OPT_WITHOUT_VC=$PERL_MM_OPT
+export PERL_MB_OPT_WITHOUT_VC=$PERL_MB_OPT
 # get our env focussed on our extlib/ and exclude any other locations
 export PERL_LOCAL_LIB_ROOT=$vctoolsdir/extlib
 export PERL5LIB=$PERL_LOCAL_LIB_ROOT
